<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android.support.v7.appcompat="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scaleType="center"
    android:fitsSystemWindows="true"
    android:splitMotionEvents="false"
    tools:context=".SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android.support.v7.appcompat:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        android:layout_height="wrap_content"
        android.support.v7.appcompat:title="Settings"
        android:background="#66FFFFFF"
        android:id="@+id/toolbar"
        android.support.v7.appcompat:titleTextColor="#ffffff"
        android:layout_alignParentTop="true"
        tools:targetApi="lollipop"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:text="@string/service_state"
            android:layout_below="@+id/toolbar"
            android:textSize="18sp"/>

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:clickable="false"
            android:fontFamily="monospace"
            android:text="@string/active_when_screen_is_off"
            android:textSize="18sp"/>

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:clickable="false"
            android:fontFamily="monospace"
            android:text="@string/vibrate_when_move_recognized"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:text="@string/sensor_sensitivity"
            android:textColor="#000000"
            android:textSize="18sp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/seekBar"
        android:layout_below="@+id/switch3"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_height="100dp"
        android:layout_width="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_alignParentBottom="true"
        tools:targetApi="lollipop">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_settings"/>

    </RelativeLayout>
</RelativeLayout>